# console-utils-rs

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: control.rs  input.rs  lib.rs  read.rs  styled.rs
tests/: test.rs
