[package]
name = "console-utils"
version = "1.5.9"
edition = "2021"
authors = ["Nils Wrenger <nils@wrenger.net>"]
description = "Simple CLI Input and Control Utilities"
keywords = ["console", "terminal", "cli"]
categories = ["command-line-utilities", "cli"]
repository = "https://github.com/nwrenger/console-utils-rs"
readme = "README.md"
license = "MIT"

[lib]

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.150"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
default-features = false
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
]
