[package]
name = "console-utils"
version = "1.6.1"
edition = "2021"
authors = ["Nils Wrenger <nils@wrenger.net>"]
description = "Simple CLI Input and Control Utilities"
keywords = ["console", "terminal", "cli"]
categories = ["command-line-utilities", "command-line-interface"]
rust-version = "1.63.0"
repository = "https://github.com/nwrenger/console-utils-rs"
readme = "README.md"
license = "MIT"

[lib]

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.169"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
default-features = false
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_Input_KeyboardAndMouse",
]
